test/classes/initializers/generic_initializer.good
generic_initializer.chpl:5: error: initializer for class 'Foo' requires a generic argument called 'x'
